# falt-confessions

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  product_backlog.md  pyproject.toml
backend/alembic/: env.py
backend/docs/: c4_class.puml
backend/documentation/: er.puml  sipoc.puml
backend/nginx/: Dockerfile
backend/nginx/conf.d/: default.conf
backend/src/: main.py
backend/src/entities/: __init__.py  confession.py  enums.py
backend/src/frameworks_and_drivers/: __init__.py  dependencies.py
backend/src/frameworks_and_drivers/db/: __init__.py  database.py
backend/src/frameworks_and_drivers/gateways/: __init__.py  llm_moderation_gateway.py  telegram_bot_gateway.py
backend/src/frameworks_and_drivers/models/: __init__.py  confession.py
backend/src/frameworks_and_drivers/repositories/: __init__.py  sqlalchemy_confession_repository.py
backend/src/frameworks_and_drivers/rest_api/: __init__.py
backend/src/frameworks_and_drivers/rest_api/routers/: __init__.py  confession.py  poll.py
backend/src/frameworks_and_drivers/rest_api/schemas/: __init__.py  confession.py
backend/src/interface_adapters/: __init__.py  controllers.py  dto.py  gateway_protocols.py  repository_protocols.py
backend/src/use_cases/: __init__.py  base.py  confession_use_cases.py
backend/tests/: __init__.py
backend/tests/entities/: __init__.py  test_attachment.py  test_comment.py  test_confession.py  test_moderation_log.py  test_poll.py  test_published_record.py  test_tag.py
backend/tests/frameworks_and_drivers/: __init__.py
backend/tests/frameworks_and_drivers/gateways/: __init__.py  test_llm_moderation_gateway.py  test_telegram_bot_gateway.py
backend/tests/frameworks_and_drivers/repositories/: __init__.py  test_sqlalchemy_confession_repository.py
backend/tests/frameworks_and_drivers/rest_api/: __init__.py
backend/tests/frameworks_and_drivers/rest_api/routers/: __init__.py  test_confession.py  test_poll.py
backend/tests/use_cases/: __init__.py  test_create_confession_use_case.py  test_moderate_confession_use_case.py  test_publish_confession_use_case.py
documentation_back/: c4_class.puml
frontend/: README.md  index.html  style.css
frontend/src/: main.ts
