[tool.poetry]
name = "falt-conf"
version = "0.1.0"
description = "ФАЛТ.конф - система для анонимных признаний"
authors = ["ФАЛТ.конф Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi = "^0.112.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.4.0"
sqlalchemy = "^1.4.53"
uvicorn = "^0.30.5"
loguru = "^0.7.2"
aiogram = "^3.4.1"
greenlet = "^3.2.2"

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pre-commit = "^3.8.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^5.0.0"
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.0"
mypy = "^1.10.0"

[tool.sort.config]
auto = true
case-sensitive = false
sort-python = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# These settings can only be changed using CLI flags.
addopts = "--cov=src --cov-report html --import-mode=importlib"

[tool.coverage.run]
branch = true
omit = [
    "**/alembic/*.py",
    "**/config/*.py",
    "**/tests/*.py",
    "**/database.py",
    "**/sandbox.py",
]

[tool.coverage.report]
fail_under = 75  # Согласно требованиям в README.md

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["C901", "E", "F", "I", "S", "W"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["S"]

[tool.ruff.lint.isort]
known-third-party = ["alembic"]
known-first-party = ["config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
